@@ -1,3 +1,9 @@
+2008-03-22 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MapList.py
+	* src/Browser.py
+	Save configuration via gconf.
+
 2008-03-21 Martin Schaaf <mascha@ma-scha.de>
 
 	* src/ImageThought.py
